<resources>
    <string name="app_name">Pexels_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watches">Watches</string>
    <string name="drawing">Drawing</string>
    <string name="ice">Ice</string>
    <string name="brick_walls">Brick_walls</string>
    <string name="flowers">Flowers</string>
    <string name="architecture">Architecture</string>
    <string name="nature">Nature</string>
</resources>