<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeFragment">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/watches_btn"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:background="@drawable/text_corner_radius"
                android:backgroundTint="@color/color_launcher_logo_back"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/watches" />

            <TextView
                android:id="@+id/Drawing"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:background="@drawable/text_corner_radius"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/drawing" />

            <TextView
                android:id="@+id/ice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/text_corner_radius"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/ice" />

            <TextView
                android:id="@+id/brick_walls"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:background="@drawable/text_corner_radius"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/brick_walls" />

            <TextView
                android:id="@+id/flowers"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:background="@drawable/text_corner_radius"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/flowers" />

            <TextView
                android:id="@+id/architecture"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:background="@drawable/text_corner_radius"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/architecture" />

            <TextView
                android:id="@+id/nature"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="10dp"
                android:background="@drawable/text_corner_radius"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/nature" />

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frl_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:scrollbars="vertical"
            android:transitionGroup="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            tools:itemCount="7"
            tools:listitem="@layout/image_item_card" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>